--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-
+*{
+    margin: 0;
+    padding: 0;
+}
+a{
+    text-decoration: none;
+}
 .page-moments {
     max-width: 640px;
     margin: 0 auto;
